// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs/> matches snapshot 1`] = `
<div>
  <section
    class="tabs css-3ghqkg-container"
    id="tab-1"
  >
    <div
      class="nav-wrapper"
      role="navigation"
    >
      <nav
        class="css-sxhcft-tabsHeader-tabsHeader"
        role="tablist"
      >
        <div
          aria-controls="content-0"
          aria-selected="true"
          class="tab-link selected css-1gy7zsk-tabNavItem-tabNavItem"
          data-testid="my-tab-0-tab"
          id="my-tab-0"
          role="tab"
        >
          Tab 1
        </div>
        <div
          aria-controls="content-1"
          aria-selected="false"
          class="tab-link css-19gjr6f-tabNavItem-tabNavItem"
          data-testid="my-tab-1-tab"
          id="my-tab-1"
          role="tab"
        >
          Tab 2
        </div>
        <div
          aria-controls="content-2"
          aria-selected="false"
          class="tab-link css-19gjr6f-tabNavItem-tabNavItem"
          data-testid="my-tab-2-tab"
          id="my-tab-2"
          role="tab"
        >
          Tab 3
        </div>
      </nav>
    </div>
    <div
      aria-live="polite"
      id="content"
      role="region"
    >
      <div
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </div>
    </div>
  </section>
</div>
`;

exports[`<Tabs/> matches snapshot with stickyHeader 1`] = `
<div>
  <section
    class="css-3ghqkg-container"
  >
    <div
      class="nav-wrapper"
      role="navigation"
    >
      <nav
        class="css-1yfjqbx-tabsHeader-tabsHeader"
        role="tablist"
      >
        <div
          aria-controls="content-0"
          aria-selected="true"
          class="tab-link selected css-1gy7zsk-tabNavItem-tabNavItem"
          data-testid="my-tab-0-tab"
          id="my-tab-0"
          role="tab"
        >
          Tab 1
        </div>
        <div
          aria-controls="content-1"
          aria-selected="false"
          class="tab-link css-19gjr6f-tabNavItem-tabNavItem"
          data-testid="my-tab-1-tab"
          id="my-tab-1"
          role="tab"
        >
          Tab 2
        </div>
        <div
          aria-controls="content-2"
          aria-selected="false"
          class="tab-link css-19gjr6f-tabNavItem-tabNavItem"
          data-testid="my-tab-2-tab"
          id="my-tab-2"
          role="tab"
        >
          Tab 3
        </div>
      </nav>
    </div>
    <div
      aria-live="polite"
      id="content"
      role="region"
    >
      <div
        id="content-0"
        role="tabpanel"
      >
        Test tab 1
      </div>
    </div>
  </section>
</div>
`;
